--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 {q: "I ___ (see) him yesterday.", a: "saw", t: "我昨天看到他。"},{q: "They ___ (not go) home.", a: "did not go", t: "他們沒回家。"},
                 {q: "She ___ (eat) a sandwich.", a: "ate", t: "她吃了一個三明治。"},{q: "We ___ (buy) a car last year.", a: "bought", t: "我們去年買了車。"},
                 {q: "He ___ (finish) his work.", a: "finished", t: "他完成了工作。"},{q: "It ___ (rain) last night.", a: "rained", t: "昨晚下雨了。"},
-                {q: "You ___ (not call) me.", a: "did not call", t: "你沒打給我。"},{q: "They ___ (arrive) late.", a: "arived", t: "他們遲到了。"},
+                {q: "You ___ (not call) me.", a: "did not call", t: "你沒打給我。"},{q: "They ___ (arrive) late.", a: "arrived", t: "他們遲到了。"},
                 {q: "I ___ (write) a letter.", a: "wrote", t: "我寫了一封信。"},{q: "She ___ (not stay) long.", a: "did not stay", t: "她沒待很久。"}
             ]
         },
